refer a freind fix position on mobile

--- a/src/assets/scss/components/header.module.scss
+++ b/src/assets/scss/components/header.module.scss
@@ -412,8 +412,6 @@
 }
 .mobile-referral-span {
     @include fontStyle(14, 16);
-    padding-bottom: 165px;
-    padding-top: 20px;
     padding-left: 25px;
     display: block;
     @extend %futurapt-medium;
