--- a/src/assets/scss/components/layout.scss
+++ b/src/assets/scss/components/layout.scss
@@ -2652,3 +2652,6 @@ p {
     }
 }
 
+#mob-navigation #navbar {
+    padding-bottom: 15px;
+}
